--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,7 @@
   "author": "Igor",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -20,7 +21,6 @@
     "express-generator": "^4.2.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
-    "lol-champions": "^0.3.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.22",
